--- a/root/pages/emplogin.html
+++ b/root/pages/emplogin.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Fifo home page</title>
+    <title>Fifo emplogin page</title>
       <link rel="icon" href="../Favicon/favicon.ico">
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -101,12 +101,8 @@
           </div>
         </div>
           <script src="../js/emplogin.js" charset="utf-8"></script>
-
-
-    </section>
-
+      </section>
 </main>
-
 <!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
