--- a/root/pages/index.html
+++ b/root/pages/index.html
@@ -66,7 +66,7 @@
    </header>
    <main>
     <!-- slider section -->
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4000">
+      <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4000">
    			  <ol class="carousel-indicators">
    			    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
    			    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -104,6 +104,40 @@
    		</div>
    	</div>
     <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+-->
+    <div class="bd-example">
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="/placeholder/pictures/image.svg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>First slide label</h3>
+              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/placeholder/pictures/image.svg" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Second slide label</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+
   <!--section1-->
   <div class="section-1">
       <div class="container text-center">
