--- a/root/pages/index.html
+++ b/root/pages/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 
-    <<link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body>
    <header>
@@ -363,7 +363,7 @@
                      <input type="text" class="footer-form-style" placeholder="Phone Number">
                    </div>
                    <div class="footer-form-box">
-                     <input type="submit" class="footer-form-submit-style" value="SUBMIT" ">
+                     <input type="submit" class="footer-form-submit-style" value="SUBMIT">
                    </div>
                  </form>
                </div>
@@ -387,7 +387,7 @@
    <div class="footer-bottom">
      <div class="row">
        <div class="col-lg-12 col-md-12 col-sm-12">
-         <p>Copyright 2018 Learning Tutorial Point All Rights Reserved</p>
+         <p>Copyright © 2019 Fifosolutions. All right are reserved.</p>
        </div>
      </div>
    </div>
